    not specified by Evernote.
  * Added a dialog box to show which the currently defined
    shortcuts.
  * Added "About Qt" dialog box.
  * Added a command to open the Github page.
  * Added the ability to use find/replace shortcuts in an
    external window.
  * Added the ability to automatically restart after the
    API rate limit has been exceeded (experimental).
  * Built under Qt5.
  * Bug fixes.
 -- Randy Baumgarte <randy@fbn.cx>  Mon, 12 Dec 2016 12:00:00 -0400

NixNote (2.0-beta-10) stable; urgency=low
  * Splt Hunspell into a plugin.
  * Bug fixes.
 -- Randy Baumgarte <randy@fbn.cx>  Sun, 18 Sep 2016 12:00:00 -0400


NixNote (2.0-beta-9) stable; urgency=low
  * Added the ability to append to an existing note via the 
    command line.
  * Added the ability to disable or customize thumnail intervals.
  * Bug fixes.
 -- Randy Baumgarte <randy@fbn.cx>  Sun, 14 Aug 2016 12:00:00 -0400


NixNote (2.0-beta-8) stable; urgency=low
  * Added the ability to open and close a notebook via the
    command line.
  * Separated the webcam into a separate plugin so 
    opencv is not required.
  * Added a few new shortcuts.
  * Bug fixes.
 -- Randy Baumgarte <randy@fbn.cx>  Sat, 25 Jun 2016 12:00:00 -0400


NixNote (2.0-beta-7) stable; urgency=low
  * Added the ability to create a Table of Contents from 
    selected notes.
  * More aggressive cleanup of notes to remove invalid
    attributes.
  * Note synchronization no longer stops after the first
    failure.
  * Added more command line options.
  * Added the option to automatically add a username to 
    new notes.
  * Updated Czech translation.
  * Bug fixes.
 -- Randy Baumgarte <randy@fbn.cx>  Fri, 18 Dec 2015 18:00:00 -0400


NixNote (2.0-beta-6) stable; urgency=low
  * Added a "Presentation Mode" that hides almost 
    everything except the editor, the attributes bar, 
    and the tabs of open notes.
  * Added the ability to customize the editor's 
    default font & background color via the theme.ini.  