@@ -1,0 +1,13 @@
+Package: nixnote2
+Version: __VERSION__
+Section: x11 
+Priority: optional
+Architecture: __ARCH__ 
+Installed-Size: 133120
+Depends: libc6, libpoppler-qt4-4, libqtwebkit4, libqt4-sql, libqt4-sql-sqlite, libqt4-xml, libqtgui4, libqt4-network, libqtcore4, libpng12-0, libpoppler44 | libpoppler46 | libpoppler49 | libpoppler52 | libpoppler58 | libpoppler61,  libsqlite3-0, libtbb2, libopenexr6 | libopenexr22, tidy, libavcodec54 | libavcodec-ffmpeg56 | libavcodec-extra-53 | libavcodec-extra-54 | libavcodec-extra-56 | libavcodec-ffmpeg-extra56,  libavformat54 | libavformat-extra-53 | libavformat-extra-54 | libavformat-55 | libavformat55 | libavformat-extra-55 | libavformat56 | libavformat-56 | libavformat-extra-56 | libavformat-ffmpeg56, libswscale2 | libswscale-extra-2 | libswscale3 | libswscale-ffmpeg3, libdc1394-22, libcurl3
+Recommends: mimetex, libreoffice-common, openjdk-7-jre | openjdk-7-jdk | sun-java7-jdk | sun-java7-jre | java7-sdk | java7-runtime | default-jre, nixnote2-webcam-plugin, nixnote2-hunspell-plugin 
+Maintainer: Randy Baumgarte <randy@fbn.cx>
+Description: Open Source Evernote client.
+ NixNote is a client for the Evernote service (www.evernote.com).  It
+ will allow synchronization and editing of notes from your local
+ system.
