@@ -19,6 +19,7 @@ NixNote (2.0-beta-11) stable; urgency=low
     external window.
   * Added the ability to automatically restart after the
     API rate limit has been exceeded (experimental).
+  * Added the option to show a popup on sync errors.
   * Built under Qt5.
   * Bug fixes.
  -- Randy Baumgarte <randy@fbn.cx>  Mon, 12 Dec 2016 12:00:00 -0400
